--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+
+		<thead>
+			<th>
+				roll number
+			</th>
+			<th>
+				name
+			</th>
+		</thead>
+		<tbody>
+  <tr>
+
+	  <td> 1234 </td>
+	  <td> ajay </td>
+  </tr>
+			<tr>
+				<td> 1245</td>
+				<td> arjun </td>
+			</tr>
+			
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
